Fixed the sub-menu dropdown problem on mobile devices.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,6 +33,11 @@ body {
 // Example:
 // @linkColor: #ff0000;
 
+// Fix the mobile submenu problem
+.dropdown-backdrop {
+  position: static;
+}
+
 //=================================
 // Twitter Bootstrap variable edits
 //=================================
